<resources>
    <string name="app_name">Foodcu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes </string>
    <string name="favoriteRecipes">Favorite Recipes </string>
    <string name="foodjoke">Food Joke</string>
    <string name="favorite_recipes_fragment">Favorite Recipes</string>
    <string name="food_joke_fragment" >Food Joke</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="drink">Drink</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="breakfast">Breakfast</string>
    <string name="appetizer">Appetizer</string>
    <string name="side_dish">Side Dish</string>
    <string name="desert">Desert</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="whole30">Whole30</string>
    <string name="primal">Primal</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="glutenfree">Gluten Free</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healty</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="share">Share</string>
    />
</resources>