<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.overview.OverviewFragment">


    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

    <ImageView
        android:id="@+id/ivTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintEnd_toEndOf="@+id/tvTime"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTime"
        app:layout_constraintEnd_toStartOf="@+id/tvTime" />

    <ImageView
        android:id="@+id/ivLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@+id/tvLikes"
        app:layout_constraintEnd_toEndOf="@+id/tvLikes"
        app:layout_constraintStart_toStartOf="@+id/tvLikes"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/titleColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

    <ImageView
        android:id="@+id/ivVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/tvTittle"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/tvVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/ivVegetarian"
        app:layout_constraintStart_toEndOf="@+id/ivVegetarian"
        app:layout_constraintTop_toTopOf="@+id/ivVegetarian" />

    <ImageView
        android:id="@+id/ivVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/ivVegetarian"
        app:layout_constraintTop_toBottomOf="@+id/ivVegetarian"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/tvVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/ivVegan"
        app:layout_constraintStart_toEndOf="@+id/ivVegan"
        app:layout_constraintTop_toTopOf="@+id/ivVegan" />

    <ImageView
        android:id="@+id/ivGluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@+id/tvVegetarian"
        app:layout_constraintStart_toEndOf="@+id/tvVegetarian"
        app:layout_constraintTop_toTopOf="@+id/tvVegetarian"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/tvGluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/glutenfree"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/ivGluten_free"
        app:layout_constraintStart_toEndOf="@+id/ivGluten_free"
        app:layout_constraintTop_toTopOf="@+id/ivGluten_free" />

    <ImageView
        android:id="@+id/ivDairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/ivGluten_free"
        app:layout_constraintTop_toBottomOf="@+id/ivGluten_free"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/tvDairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/ivDairy_free"
        app:layout_constraintStart_toEndOf="@+id/ivDairy_free"
        app:layout_constraintTop_toTopOf="@+id/ivDairy_free" />

    <ImageView
        android:id="@+id/ivHealthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@+id/tvGluten_free"
        app:layout_constraintStart_toEndOf="@+id/tvGluten_free"
        app:layout_constraintTop_toTopOf="@+id/tvGluten_free"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/tvHealthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/ivHealthy"
        app:layout_constraintStart_toEndOf="@+id/ivHealthy"
        app:layout_constraintTop_toTopOf="@+id/ivHealthy" />

    <ImageView
        android:id="@+id/ivCheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/ivHealthy"
        app:layout_constraintTop_toBottomOf="@+id/ivHealthy"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/tvCheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheap"
        app:layout_constraintStart_toEndOf="@+id/ivCheap"
        app:layout_constraintTop_toTopOf="@+id/ivCheap" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivVegan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>